Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -41,8 +41,4 @@ pipeline:
                     connectorRef: dockerHubReadOnly
                     image: maven:3.9.10-amazoncorretto-17
                     shell: Sh
-                    command: |-
-                      git clone git@github.com:WebGoat/WebGoat.git
-                      cd WebGoat
-                      git checkout main
-                      ./mvnw clean install
+                    command: ./mvnw clean install
