--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -40,6 +40,6 @@ pipeline:
                   identifier: Run_1
                   spec:
                     connectorRef: dockerHubReadOnly
-                    image: maven:3.9.10-amazoncorretto-17
+                    image: maven:3.9.9-amazoncorretto-23-debian
                     shell: Sh
                     command: mvn clean install
