Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -12,7 +12,7 @@ pipeline:
         build: <+input>
   stages:
     - stage:
-        name: Build
+        name: Build SCA  SAST
         identifier: Build
         description: ""
         type: CI
@@ -158,6 +158,24 @@ pipeline:
                     advanced:
                       log:
                         level: info
+              - step:
+                  type: Grype
+                  name: Grype_1
+                  identifier: Grype_1
+                  spec:
+                    mode: orchestration
+                    config: default
+                    target:
+                      type: container
+                      detection: auto
+                    advanced:
+                      log:
+                        level: info
+                    privileged: true
+                    image:
+                      type: harness
+                      registry: tanays
+                      image_path: webgoat
     - stage:
         name: DAST
         identifier: DAST
