Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -78,6 +78,10 @@ pipeline:
                               advanced:
                                 log:
                                   level: info
+                              resources:
+                                limits:
+                                  memory: 3G
+                                  cpu: "3"
                         - step:
                             type: Bandit
                             name: Bandit_1
