Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -212,7 +212,9 @@ pipeline:
                     config: default
                     target:
                       type: instance
-                      detection: auto
+                      detection: manual
+                      name: webgoat
+                      variant: master
                     advanced:
                       log:
                         level: info
