Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -252,7 +252,7 @@ pipeline:
                       type: docker
                       spec:
                         connector: dockerHubReadOnly
-                        image: webgoat:latest
+                        image: latest
                     attestation:
                       type: cosign
                       spec:
