Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -104,15 +104,12 @@ pipeline:
                           advanced:
                             log:
                               level: info
-          infrastructure:
-            type: KubernetesDirect
-            spec:
-              connectorRef: tanaysk8connector
-              namespace: default
-              automountServiceAccountToken: true
-              nodeSelector: {}
-              harnessImageConnectorRef: dockerHubReadOnly
-              os: Linux
+          platform:
+            os: Linux
+            arch: Arm64
+          runtime:
+            type: Cloud
+            spec: {}
     - stage:
         name: DockerImage
         identifier: DockerImage
