--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -35,23 +35,20 @@ pipeline:
                     image: maven:3.9.9-amazoncorretto-23-debian
                     shell: Sh
                     command: mvn clean package -Dmaven.test.skip=true
-              - stepGroup:
-                  name: SCA
-                  identifier: SCA
-                  steps:
-                    - step:
-                        type: OsvScanner
-                        name: OsvScanner_1
-                        identifier: OsvScanner_1
-                        spec:
-                          mode: orchestration
-                          config: default
-                          target:
-                            type: repository
-                            detection: auto
-                          advanced:
-                            log:
-                              level: info
+              - step:
+                  type: Owasp
+                  name: Owasp_1
+                  identifier: Owasp_1
+                  spec:
+                    target:
+                      detection: auto
+                      type: repository
+                    advanced:
+                      log:
+                        level: info
+                      args: {}
+                    mode: orchestration
+                    config: default
               - stepGroup:
                   name: SAST
                   identifier: SAST
