Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -107,6 +107,13 @@ pipeline:
           runtime:
             type: Cloud
             spec: {}
+        when:
+          pipelineStatus: Success
+        failureStrategies:
+          - onFailure:
+              errors: []
+              action:
+                type: Ignore
     - stage:
         name: DockerImage
         identifier: DockerImage
