Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -8,8 +8,9 @@ pipeline:
     ci:
       codebase:
         connectorRef: tanaysgithub
-        repoName: webgoat
+        repoName: WebGoat
         build: <+input>
+        sparseCheckout: []
   stages:
     - stage:
         name: Build SCA  SAST
